# manta-types

./: Cargo.toml  FILE_TEMPLATE
manta-asset/: Cargo.toml  README.md
manta-asset/src/: asset_id.rs  lib.rs  processing.rs  sampling.rs  sanity.rs  serdes.rs  test.rs
manta-data/: Cargo.toml
manta-data/src/: default.rs  lib.rs  metadata.rs  sanity.rs  serdes.rs
manta-ledger/: Cargo.toml
manta-ledger/src/: lib.rs
src/: default.rs  lib.rs  metadata.rs  serdes.rs  zkp.rs
