[package]
name = "manta-ledger"
version = "0.1.0"
authors = ["Manta Network <contact@manta.network>"]
edition = "2018"
license = "GPL 3.0"
repository = "https://github.com/Manta-Network/manta-types"
description = "The crate that defines and implements manta private assets"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Substrate dependencies
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [ "derive" ] }

# Arkworks dependencies
ark-std = { version = "0.2.0", default-features = false }

# Manta dependencies
manta-crypto = { branch = "manta", git = "https://github.com/Manta-Network/manta-crypto/", default-features = false }
manta-error = { branch = "manta", git = "https://github.com/Manta-Network/manta-error/", default-features = false }

[dev-dependencies]

[features]
default = [ ]
